# local_playlist_to_spotify

./: .gitignore  README.rst  local_playlist_to_spotify.py  pyproject.toml  recreate_local_library_in_spotify.py
recreate_local_library_in_spotify/: __init__.py
